Add swagger comments
