# internal/infra/httpapi/controllers/auth_controller.go
@@ -33,14 +33,14 @@ type loginUserResponse struct {
 	Token string `json:"token"`
 }
 
-// @Summary Login into the app
-// @Description Logs an existing user into the app
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param user body loginUserRequest true "User credentials"
-// @Success 200 {object} loginUserResponse
-// @Router /auth/login [post]
+//	@Summary		Login user into the app
+//	@Description	Logs an existing user into the app
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user-credentials	body		loginUserRequest	true	"User credentials"
+//	@Success		200					{object}	loginUserResponse
+//	@Router			/auth/login [post]
 func (a *authController) Login(c *fiber.Ctx) error {
 	var req loginUserRequest
 	if err := c.BodyParser(&req); err != nil {
@@ -78,14 +78,14 @@ type registerUserResponse struct {
 	Token string `json:"token"`
 }
 
-// @Summary Register user in the app
-// @Description Registers a new user in the app
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param user body registerUserRequest true "New user credentials"
-// @Success 201 {object} registerUserResponse "User created successfully, returns jwt token"
-// @Router /auth/signup [post]
+//	@Summary		Register user in the app
+//	@Description	Registers a new user in the app
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user-info	body		registerUserRequest		true	"New user credentials"
+//	@Success		201			{object}	registerUserResponse	"User created successfully, returns jwt token"
+//	@Router			/auth/signup [post]
 func (a *authController) RegisterUser(c *fiber.Ctx) error {
 	var req registerUserRequest
 	if err := c.BodyParser(&req); err != nil {
